--- a/style/responsive.css
+++ b/style/responsive.css
@@ -157,13 +157,16 @@
     .menu-2{
         background-color: #fff;
     }
-
+    .menu-2 img{
+      width: 100%;
+    }
+    .container.fix{
+      padding: 0px;
+    }
       .frame-1{
         display: none;
       }
-      .frame-1-img{
-        width: 100%;
-      }
+   
       /*menu-3*/
       .frame-2{
         display: none;
@@ -214,6 +217,17 @@
         border-bottom: 1px solid #f9a420;;
      }
      /*frame-6-1-center-1*/
+     .frame-6-1-center-if{
+      position: relative;
+      padding-bottom: 56%;
+     }
+     .frame-6-1-center-if-1{
+         position: absolute;
+         width: 100%;
+         height: 100%;
+         top: 0;
+         left: 0;
+     }
      .frame-6-1-center-1 h1{
         font-size: 22px;
         font-weight: 600;
@@ -245,7 +259,9 @@
      }
      /*frame-2*/
      .frame-6-2-top{
-        display: flex;
+        display: flex; 
+        width: 100%;
+        border: 1px solid;
         
     
      }
@@ -255,16 +271,15 @@
      .frame-6-2-top-left{
         width: 50%;
         background-color: #f9a420;
-        color: #fff;
-        padding: 10px 20px;
-        border-radius: 56px;
+        padding: 5px;
+       
      }
      .frame-6-2-top-right{
         width: 50%;
       padding: 5px 20px;
         border-radius: 56px;
         color: #000;
-        box-shadow: 1px 0px 0px gray;
+        
      }
      .frame-6-2-center-1{
         font-weight: 600;
@@ -308,7 +323,7 @@
      }
      .frame-7-1-center-img{
         display: flex;
-        padding: 0px 10px;
+        padding: 0px 35px;
      }
      .frame-7-1-center-1 p{
         background-color: #fff;
@@ -334,7 +349,7 @@
         display: flex;
         position: relative;
         bottom: 50px;
-        padding: 0px 10px;
+        padding: 0px 35px;
      }
      .frame-7-1-center-3 p{
         background-color: #fff;
@@ -532,6 +547,14 @@
      .frame-11-center{
       display: block;
     
+   }
+   .frame-11-center-1{
+      display: block;
+
+   }
+   .child-1{
+      padding: 5px 0px;
+      width: 100%;
    }
    .frame-11-center iframe{
       width: 350px;
